Fix issue with posts being unaligned with center of page

--- a/public_html/theme.css
+++ b/public_html/theme.css
@@ -45,6 +45,7 @@ div.social img {
 
 #posts {
 	width:100%;
+	margin-left: 0px;
 }
 
 .page-jumbo {
